Port MMMod 1.0.18.1 to Minecraft 1.20.1